--- a/templates/teacher/assign_teacher.html
+++ b/templates/teacher/assign_teacher.html
@@ -26,10 +26,7 @@
 
             <form action="" method="POST">
                 {% csrf_token %}
-                <div class="form-group">
-                    <label for="id_teacher">Full Name</label>
-                    <input type="text" class="form-control" name="teacher" id="id_teacher" value="{{teacher}}" readonly>
-                </div>
+               
                 {% for field in form %}
                     <div class="form-group">
                         {{field.label_tag}}
@@ -48,7 +45,9 @@
                     <th scope="col">Sno.</th>
                     <th scope="col">Subject</th>
                     <th scope="col">Course</th>
+                    <th scope="col">Date</th>
                     <th scope="col">Action</th>
+
                   </tr>
                 </thead>
                 <tbody>
@@ -59,8 +58,10 @@
     
                     <td>{{item.subject}}</td>
                     <td>{{item.course}}</td>
+                    <td>{{item.date.year}}</td>
                     <td>
-                        <a href="" class="text-danger" data-toggle="tooltip" data-placement="top" title="remove">
+
+                        <a href=" {% url 'assign_subject_delete' item.id %}" class="text-danger" data-toggle="tooltip" data-placement="top" title="remove">
                             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
                               </svg>
@@ -76,4 +77,7 @@
     </div>
 </div>
 {% endblock inner_content %}
+{% block script %}
+    <script src="{% static 'js/teacher.js' %}"></script>
+{% endblock script %}
     
