--- a/templates/attendance/student_attendance.html
+++ b/templates/attendance/student_attendance.html
@@ -9,7 +9,7 @@
 {% endblock extra_head %}
     
 {% block inner_content %}
-<div class="m-2">
+<div class="m-2" id="wrapper_div">
 
     
     {% if error %}
