--- a/templates/subject/index.html
+++ b/templates/subject/index.html
@@ -10,7 +10,7 @@
   
     
 {% block inner_content %}
-<div id="subject_index_table">
+<div  class="scroller_table" >
     <table class="table table-hover">
         <thead>
           <tr>
