--- a/templates/teacher/assign_teacher.html
+++ b/templates/teacher/assign_teacher.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock style_css %}
 {% block inner_content %}
-<div class="mt-3" >
+<div class="mt-3" id="wrapper_div" >
     <div class="row">
         <div class="col-4 border p-3 ml-3">
             
