--- a/templates/base/layout.html
+++ b/templates/base/layout.html
@@ -1,67 +1,89 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    {% load static %}
-    <title>College Management System</title>
-    <link rel="stylesheet" href="{% static 'css/admin_style.css' %}">
-    {% block extra_head %}
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  {% load static %}
   
-    {% endblock extra_head %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap_css.css' %}">
+  
+  <title>College Management System</title>
+ 
+  <link rel="stylesheet" href="{% static 'css/side_bar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/bootstrap_css.css' %}">
+  {% block extra_head %}
 
-
-  </head>
-  <body>
+  {% endblock extra_head %}
+  
+  {% block inner_extra_head %}
     
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark pl-0 fixed-top">
-  <a class="navbar-brand col-3 text-center" href="#">Collge Management System</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  {% endblock inner_extra_head %}
+    
 
-  <div class="collapse navbar-collapse admin_main_div" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li>
-        <a class="nav-link mx-3 dropdown-toggle" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-          <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-person-circle mr-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-  <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-  <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-</svg>Admin
-      </a>
 
-      </li>
-    </ul>
-  </div>
-  <div class="collapse admin_drop_down" id="collapseExample">
-    <ul class="list-group drop_down_menu">
-  <a href="{% url 'admin_logout' %}" class="list-group-item list-group-item-action px-5 border-bottom">Logout</a>  
-  <a href="#" class="list-group-item list-group-item-action px-4 border-bottom px-5">Settings</a> 
-</ul>
-</div>
+</head>
 
-</nav>
+<body id="test">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark pl-0">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-{% block content %}
+    <div class="collapse navbar-collapse admin_main_div" id="navbarSupportedContent" style="position: relative;">
+      <ul class="navbar-nav ml-auto">
+        <li>
+          <a class="nav-link mx-3 dropdown-toggle" data-toggle="collapse" href="#collapseExample" role="button"
+            aria-expanded="false" aria-controls="collapseExample">
+            <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-person-circle mr-1" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z" />
+              <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+              <path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z" />
+            </svg>Admin
+          </a>
+
+        </li>
+      </ul>
+      <div class="collapse admin_drop_down" id="collapseExample" style="position: absolute; right: 0px; top: 45px; z-index: 100;">
+        <ul class="nav flex-column rounded " style="background-color: #001a33;">
+          <li class="nav-item border-bottom">
+            <a href="{% url 'admin_logout' %}" class="nav-link px-5 text-light">Logout</a>
+          </li>
+          <li class="nav-item border-bottom">
+            <a href="#" class="nav-link px-5 text-light">Settings</a>
+          </li>
+         
+        </ul>
+      
+    </div>
+    
+
+  </nav>
   
-{% endblock content %}
 
-{% block script %}
+{% block outer_content %}
   
-{% endblock script %}
+{% endblock outer_content %}
   
 
-  
-        
+  {% block script %}
 
-    <script src="{% static 'js/bootstrap1_jquery.js' %}"></script>
-    <script src="{% static 'js/bootstrap2_jquery.js' %}"></script>
-    <script src="{% static 'js/bootstrap3_jquery.js' %}"></script>
-  </body>
+  {% endblock script %}
+
+
+
+
+
+  <script src="{% static 'js/bootstrap1_jquery.js' %}"></script>
+  <script src="{% static 'js/bootstrap2_jquery.js' %}"></script>
+  <script src="{% static 'js/bootstrap3_jquery.js' %}"></script>
+</body>
+
 </html>
