--- a/templates/course/index.html
+++ b/templates/course/index.html
@@ -4,12 +4,14 @@
 <!-- 'Cname','Cduration','degree_level','department','seats' -->
 {% load static %}
 
-{% block extra_head %}
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-{% endblock extra_head %}
+
+{% block inner_extra_head %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock inner_extra_head %}
+  
     
 {% block inner_content %}
-<div id="course_table_index">
+<div  class="scroller_table" >
     <table class="table table-hover text-center">
         <thead>
           <tr>
