--- a/templates/course/syllabus.html
+++ b/templates/course/syllabus.html
@@ -3,14 +3,14 @@
 {% load course %}
 {% load static %}
 
-<!-- 'Cname','Cduration','degree_level','department','seats' -->
-{% block style_css %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-{% endblock style_css %}
 
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock extra_head %}
+    
 
 {% block inner_content %}
-<div>
+<div id="wrapper_div">
     <div class=" border p-2 mt-2">
         <span class="text-capitalize" style="font-size: 25px;">{{course.Cname}} syllabus</span>
 
@@ -22,7 +22,7 @@
     <div class="row mt-2">
         <div class="col-8 mx-auto">
             <div class="card">
-                <div class="card-body" style=" height: 650px; padding: 20px; overflow-y: scroll;">
+                <div class="card-body" id="card_body">
                     {% for cs in course|get_semester_syllabus %}
 
                     {% if cs.items %}
