--- a/templates/student/admission.html
+++ b/templates/student/admission.html
@@ -6,10 +6,14 @@
 {% load static %}
 
 
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock extra_head %}
+    
 
 {% block inner_content %}
 <div class="row">
-    <div class="col-11 shadow-lg p-3 mb-3 bg-white rounded mx-auto" style="height: 700px; overflow-y: scroll; ">
+    <div class="col-11 mt-3 shadow-lg p-3 mb-3 bg-white rounded mx-auto" style="height: 700px; overflow-y: scroll; ">
         <h4 class="bg-info text-center text-white p-2 rounded" >Student Admission Form</h4>
         
         {% for message in messages %}
@@ -18,8 +22,6 @@
             
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <div class="row">
-                <div class="col-9">
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
@@ -76,6 +78,26 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="form-group">
+                                {{student_form.avatar.label_tag}}
+                                {{student_form.avatar}}
+                                {% for error in student_form.avatar.errors %}
+                                    <span class="text-danger">{{error}}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                {{student_form.gender.label_tag}}
+                                {{student_form.gender}}
+                                {% for error in student_form.gender.errors %}
+                                    <span class="text-danger">{{error}}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-group">
                         {{admission_form.course.label_tag}}
                         {{admission_form.course}}
@@ -83,22 +105,8 @@
                                     <span class="text-danger">{{error}}</span>
                                 {% endfor %}
                     </div>
-                </div>
-                <div class="col-3">
-                    <div class="w-100 border mt-3" style="height: 250px;">
-                        
-                    </div>
-                    <div class="form-row">
-                        {{student_form.avatar.label_tag}}
-                        {{student_form.avatar}}
-                        {% for error in student_form.avatar.errors %}
-                                    <span class="text-danger">{{error}}</span>
-                                {% endfor %}
-                        
-                    </div>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+
+            <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
     
