--- a/templates/teacher/index.html
+++ b/templates/teacher/index.html
@@ -13,12 +13,11 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock style_css %}
 {% block inner_content %}
-<div id="course_table_index" >
+<div  class="scroller_table"  >
   <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">SNo.</th>
-          <th scope="col">Photo</th>
           <th scope="col">Full Name</th>
           
           <th scope="col">Address</th>
@@ -33,7 +32,6 @@
           {% for teacher in teachers %}
           <tr>
               <td>{{forloop.counter}}</td>
-              <td><img src="{{teacher.avatar.url}}" class="img-fluid rounded-circle" height="60" width="60" alt=""></td>
               <td class="text-capitalize">{{teacher.first_name}} {{teacher.last_name}}</td>
               <td>{{teacher.address}}</td>
               <td>{{teacher.phone_no}}</td>
